# gamma

./: .gitignore  CMakeLists.txt  pyproject.toml  setup.py  test.py
cmake/: BuildFlags.cmake
gamma/: CMakeLists.txt  __init__.py  common.h  distribution.c  distribution.h  gamma.c  gamma.h  gamma.py  idx.h  interp.h  mat.c  mat.h  module.c  psearch.c  psearch.h  statistics.h  vec.h
